# kinova-ball-balancing-rl

./: .gitignore  MUJOCO_LOG.TXT  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: publish-github-wiki.yml
config/: cartesian_manual_ui.yaml  task_parameters.yaml
config/presets/: all_except_null_space_and_robot_model.yaml  all_except_robot_model.yaml  all_randomization.yaml  ball_properties_only.yaml  ball_reset_angular_velocity_only.yaml  ball_reset_linear_velocity_only.yaml  ball_reset_only.yaml  cartesian_pose_only.yaml  no_joint_pos_obs.yaml  no_model_rand.yaml  no_rand.yaml  null_space_only.yaml  obs_noise_only.yaml  pd_gains_only.yaml  racquet_model_only.yaml  robot_model_only.yaml  simple_rewards.yaml  use_nullspace_torque.yaml  zero_ball_reset_velocity.yaml
config/sweeps/: exp_contact_focus.yaml  exp_high_damping.yaml  exp_high_disturbance.yaml  exp_nominal.yaml  exp_stable_ppo.yaml
config/training_sets/: cartesian_ablation_simple_rewards.yaml  cartesian_pose_only.yaml  joint_cartesian_ablation_simple_rewards.yaml  joint_randomization_ablation.yaml  joint_randomization_ablation_simple_rewards.yaml
config/training_sets/cartesian_ablation_simple_rewards/: all_randomization.yaml  ball_properties_and_racquet_model.yaml  ball_properties_only.yaml  no_rand.yaml  robot_model_only.yaml
config/training_sets/joint_randomization_ablation/: all_except_null_space_and_robot_model.yaml  all_except_robot_model.yaml  all_randomization.yaml  ball_properties_only.yaml  ball_reset_angular_velocity_only.yaml  ball_reset_linear_velocity_only.yaml  ball_reset_only.yaml  no_model_rand.yaml  no_rand.yaml  null_space_only.yaml  (+3 more)
docs/: getting-started.md  index.md
docs/code/: modules.md  structure.md
docs/environment/: mdp.md  overview.md  physics.md  related-work.md  robot-model.md
scripts/: debug_policy_observations.py  export_github_wiki.py  sync_github_wiki.sh
scripts/zsh/: mjlab-completion.zsh
src/mjlab_kinova/: __init__.py  cartesian_manual_play.py  early_stop_runner.py  play_run.py  play_set.py  train_run.py  train_set.py  train_set_duration.py
tests/: test_cartesian_control_law.py  test_cartesian_osc_tracking.py  test_cartesian_pose_only_config.py
typings/mujoco/: __init__.pyi
wiki/: Getting-Started.md  Home.md  Key-Modules.md  MDP-Design.md  Physics-and-Control.md  Project-Structure.md  Related-Work.md  Robot-and-MuJoCo-Model.md  Task-Overview.md  _Sidebar.md
(+25 files in other folders)
